--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Welcome to my Webpage!</title>
 </head>
 <body>
-    <h1>Bailee Strait</h1>
+    <h1>Hello my name is Bailee!</h1>
 </body>
 </html>
