--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Welcome to my Webpage!</title>
 </head>
 <body>
+    <style> h1 {text-align:center;}</style>
     <h1>Hello my name is Bailee!</h1>
 </body>
 </html>
