--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <style> h1 {text-align:center;}</style>
-    <h1>Hello my name is Bailee!</h1>
+    <h1>Hey I'm Bailee!</h1>
     <style> p {text-align:center;}</style>
     <p>Here is some information about me. Here are some links to things.</p>
 </body>
