--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <style> h1 {text-align:center;}</style>
     <h1>Hey I'm Bailee!</h1>
-    <style> p {text-align:center;}</style>
-    <p>Here is some information about me. Here are some links to things.</p>
+    <style> h2 {text-align:center;}</style>
+    <h2>Here is some information about me. Here are some links to things.</p>
 </body>
 </html>
