added note for self

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hey I'm Bailee!</h1>
     <style> h2 {text-align:center;}</style>
     <h2>Here is some information about me. Here are some links to things.</p>
+        (! Add information about self; include age, hometown, high school, major, hobbies, interests, school involvement/clubs.)
 </body>
 </html>
