--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <style> h2 {text-align:center;}</style>
     <h2>Here is some information about me. Here are some links to things.</p>
         (! Add information about self; include age, hometown, high school, major, hobbies, interests, school involvement/clubs.)
+        (! Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.)
 </body>
 </html>
