--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>Here is some information about me. Here are some links to things.</p>
         (! Add information about self; include age, hometown, high school, major, hobbies, interests, school involvement/clubs.)
         (! Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.)
+        <a href="https://instagram.com/cowboybailee"> My Instagram</a>
 </body>
 </html>
