change heading color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to my Webpage!</title>
 </head>
 <body>
-    <style> h1 {text-align:center;}</style>
+    <style> h1 {text-align:center;} {color: pink;}</style>
     <h1>Hey I'm Bailee!</h1>
     <style> h2 {text-align:center;}</style>
     <h2>Here is some information about me. Here are some links to things.</p>
