--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     <style> h1 {text-align:center;}</style>
-    <style> h1 {color: pink;}</style>
+    <style> text {color: pink;}</style>
     <h1>Hey I'm Bailee!</h1>
     <style> h2 {text-align:center;}</style>
-    <h2>Here is some information about me. Here are some links to things.</p>
+    <h2>About me!</h2>
+    <style> p {text-align:center;}</style>
+    <p> Who I am, where I'm from, etc. </p>
     <!--Add information about self; include age, hometown, high school, major, hobbies, interests, school involvement/clubs.--> 
         <!-- Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.-->
-        <a href="https://instagram.com/cowboybailee"> My Instagram</a>
+        <h2>Links!</h2>
+        <a href="https://instagram.com/cowboybailee"> Instagram!</a>
 </body>
 </html>
