--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to my Webpage!</title>
 </head>
-<body>
+<body style = "background-color:pink;">
     <style> h1 {text-align:center;}</style>
-    <style> text {color: pink;}</style>
+    <style> text {color: white;}</style>
     <h1>Hey I'm Bailee!</h1>
     <style> h2 {text-align:center;}</style>
     <h2>About me!</h2>
