--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!--Add information about self; include age, hometown, high school, major, hobbies, interests, school involvement/clubs.--> 
         <!-- Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.-->
         <h2>Links!</h2>
+        <style> a {text-align:center;}</style>
         <a href="https://instagram.com/cowboybailee"> Instagram!</a>
 </body>
 </html>
