--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Welcome to my Webpage!</title>
 </head>
 <body style = "background-color:pink;">
+    <body style = "text-decoration-color: white;">
     <style> h1 {text-align:center;}</style>
-    <style> text {color: white;}</style>
     <h1>Hey I'm Bailee!</h1>
     <style> h2 {text-align:center;}</style>
     <h2>About me!</h2>
