--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <!-- Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.-->
         <h2>Links!</h2>
         <style> a {text-align:center;}</style>
-        <!--hyperlink image of instagram-->>
+        <!--add hyperlink image of instagram-->>
 </body>
 </html>
