--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to my Webpage!</title>
 </head>
 <body style = "background-color:pink;">
-    <body style = "text-decoration-color: white;">
+    <text style = "color:white;">
     <style> h1 {text-align:center;}</style>
     <h1>Hey I'm Bailee!</h1>
     <style> h2 {text-align:center;}</style>
@@ -17,6 +17,6 @@
         <!-- Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.-->
         <h2>Links!</h2>
         <style> a {text-align:center;}</style>
-        <!--add hyperlink image of instagram-->>
+        <!--add hyperlink image of instagram-->
 </body>
 </html>
