text style change

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body style = "background-color:pink;">
     <text style = "color:white;">
+        <text style = "font-family: monospace;">
     <style> h1 {text-align:center;}</style>
     <h1>Hey I'm Bailee!</h1>
     <style> h2 {text-align:center;}</style>
