--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <style> h2 {text-align:center;}</style>
     <h2>About me!</h2>
     <style> p {text-align:center;}</style>
-    <p> Who I am, where I'm from, etc. </p>
+    <p> My name is Bailee Strait. I'm 21 years old from Killen, Alabama. I'm currently
+        a Junior at UNA majoring in Information Technology with a
+    concentration in HCI/UX Design.  </p>
+    <img src="Facetune_28-05-2023-16-36-28.heic">
     <!--Add information about self; include age, hometown, high school, major, hobbies, interests, school involvement/clubs.--> 
         <!-- Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.-->
         <h2>Links!</h2>
