--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>About me!</h2>
     <style> p {text-align:center;}</style>
     <p> My name is Bailee Strait. I'm 21 years old from Killen, Alabama. I'm currently
-        a Junior at UNA majoring in Information Technology with a
+        a Junior at UNA, majoring in Information Technology with a
     concentration in HCI/UX Design. I'm currently a member of UNA's Student Government Association
 and Student Alumni Association. My biggest supporters are my family. They are the most important people in my life.  </p>
     <img src="file:///Users/baileestrait/Documents/Pictures/Facetune_28-05-2023-16-36-28.jpeg">
