change image size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         a Junior at UNA, majoring in Information Technology with a
     concentration in HCI/UX Design. I'm currently a member of UNA's Student Government Association
 and Student Alumni Association. My biggest supporters are my family. They are the most important people in my life.  </p>
-    <img src="file:///Users/baileestrait/Documents/Pictures/Facetune_28-05-2023-16-36-28.jpeg">
+    <img src="file:///Users/baileestrait/Documents/Pictures/Facetune_28-05-2023-16-36-28.jpeg" width="500" height="600">
     <!--Add information about self; include age, hometown, high school, major, hobbies, interests, school involvement/clubs.--> 
         <!-- Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.-->
         <h2>Links!</h2>
