--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <style> p {text-align:center;}</style>
     <p> My name is Bailee Strait. I'm 21 years old from Killen, Alabama. I'm currently
         a Junior at UNA, majoring in Information Technology with a
-    concentration in HCI/UX Design. I'm currently a member of UNA's Student Government Association
-and Student Alumni Association. My biggest supporters are my family. They are the most important people in my life.  </p>
+    concentration in HCI/UX Design. I'm currently a member of UNA's Student Government Association as a Senator
+and Student Alumni Association as an Ambassador for their Membership Committee.</p>
+<p> I cherish my family and my pets. I also enjoy developing my skills in my hobbies like digital art, and crocheting. </p>
     <img src="Facetune_28-05-2023-16-36-28.jpeg" width="100" height="300">
     <!--Add information about self; include age, hometown, high school, major, hobbies, interests, school involvement/clubs.--> 
         <!-- Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.-->
