--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
     concentration in HCI/UX Design. I'm currently a member of UNA's Student Government Association as a Senator
 and Student Alumni Association as an Ambassador for their Membership Committee.</p>
 <p> I cherish my family and my pets. I also enjoy developing my skills in my hobbies like digital art, and crocheting. </p>
-    <img src="Facetune_28-05-2023-16-36-28.jpeg" width="300" height="600">
-    <!--Add information about self; include age, hometown, high school, major, hobbies, interests, school involvement/clubs.--> 
-        <!-- Add photos of self, Alice, Sadie, and family. Maybe add photos of SGA/other organizations.-->
-        <h2>Links!</h2>
+    <img src="https://github.com/baileestrait/baileestrait.github.io/blob/main/FullSizeRender.jpeg" width="300" height="600">
+    <img src="https://github.com/baileestrait/baileestrait.github.io/blob/main/IMG_4585.JPG" width="300" height="600">
         <style> a {text-align:center;}</style>
-        <!--add hyperlink image of instagram-->
 </body>
 </html>
