--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     concentration in HCI/UX Design. I'm currently a member of UNA's Student Government Association as a Senator
 and Student Alumni Association as an Ambassador for their Membership Committee.</p>
 <p> I cherish my family and my pets. I also enjoy developing my skills in my hobbies like digital art, and crocheting. </p>
-    <img src="https://github.com/baileestrait/baileestrait.github.io/blob/main/FullSizeRender.jpeg" width="300" height="500">
-    <img src="https://github.com/baileestrait/baileestrait.github.io/blob/main/IMG_4585.JPG" width="300" height="500">
+    <img src="FullSizeRender.jpeg" width="300" height="500">
+    <img src="IMG_4585.JPG" width="300" height="500">
         <style> a {text-align:center;}</style>
 </body>
 </html>
