--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <h1>Hey I'm Bailee!</h1>
     <style> h2 {text-align:center;}</style>
     <h2>About me!</h2>
-    <style> p {text-align:center;}</style>
-    <p> My name is Bailee Strait. I'm 21 years old from Killen, Alabama. I'm currently
+    <style> h3 {text-align:center;}</style>
+    <h3> My name is Bailee Strait. I'm 21 years old from Killen, Alabama. I'm currently
         a Junior at UNA, majoring in Information Technology with a
     concentration in HCI/UX Design. I'm currently a member of UNA's Student Government Association as a Senator
-and Student Alumni Association as an Ambassador for their Membership Committee.</p>
-<p> I cherish my family and my pets. I also enjoy developing my skills in my hobbies like digital art, and crocheting. </p>
+and Student Alumni Association as an Ambassador for their Membership Committee.</h3>
+<h3> I cherish my family and my pets. I also enjoy developing my skills in my hobbies like digital art, and crocheting. </h3>
     <img src="IMG_4585.JPG" width="500" height="600" class="center">
         <style> a {text-align:center;}</style>
 </body>
