--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     concentration in HCI/UX Design. I'm currently a member of UNA's Student Government Association as a Senator
 and Student Alumni Association as an Ambassador for their Membership Committee.</h3>
 <h3> I cherish my family and my pets. I also enjoy developing my skills in my hobbies like digital art, and crocheting. </h3>
+<div style="text-align: center;"
     <img src="IMG_4585.JPG" width="500" height="600" class="center">
+    </div>
         <style> a {text-align:center;}</style>
 </body>
 </html>
