--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <style> h1 {text-align:center;}</style>
     <h1>Hey I'm Bailee!</h1>
     <img src="baileepicture.JPG" width="500" height="600" class="center">
+    .center{
+        display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+    }
     <style> h2 {text-align:center;}</style>
     <h2>About me!</h2>
     <style> h3 {text-align:center;}</style>
@@ -20,7 +26,7 @@
 and Student Alumni Association as an Ambassador for their Membership Committee.</h3>
 <h3> I cherish my family and my pets. I also enjoy developing my skills in my hobbies like digital art, and crocheting. </h3>
 <h2> Clubs I'm Involved In:</h2>
-<a href="https://www.una.edu/student-government/index.html"> UNA Student Government Association</a>
-<a href="https://www.una.edu/alumni/saa.html"> UNA Student Alumni Association</a>
+<a href="https://www.una.edu/student-government/index.html"> UNA SGA</a>
+<a href="https://www.una.edu/alumni/saa.html"> UNA SAA</a>
 </body>
 </html>
