--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         <text style = "font-family: monospace;">
     <style> h1 {text-align:center;}</style>
     <h1>Hey I'm Bailee!</h1>
-    <img src="baileepicture.JPG" width="500" height="600" class="center">
-    .center{display: block; margin-left: auto; margin-right: auto; width: 50%;}
+    <img src="baileepicture.JPG" width="500" height="600">
     <style> h2 {text-align:center;}</style>
     <h2>About me!</h2>
     <style> h3 {text-align:center;}</style>
