--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <text style = "font-family: monospace;">
     <style> h1 {text-align:center;}</style>
     <h1>Hey I'm Bailee!</h1>
-    <img src="baileepicture.jpeg" width="450" height="600">
+    <img src="baileepicture.jpeg" width="450" height="600" img-align="center">
     <style> h2 {text-align:center;}</style>
     <h2>About me!</h2>
     <style> h3 {text-align:center;}</style>
@@ -20,7 +20,7 @@
 and Student Alumni Association as an Ambassador for their Membership Committee.</h3>
 <h3> I cherish my family and my pets. I also enjoy developing my skills in my hobbies like digital art, and crocheting. </h3>
 <h2> Clubs I'm Involved In:</h2>
-<a href="https://www.una.edu/student-government/index.html"> UNA SGA</a>
+<a href="https://www.una.edu/student-government/index.html"> UNA SGA </a>
 <a href="https://www.una.edu/alumni/saa.html"> UNA SAA</a>
 </body>
 </html>
