add bullet list

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 and Student Alumni Association as an Ambassador for their Membership Committee.</h3>
 <h3> I cherish my family and my pets. I also enjoy developing my skills in my hobbies like digital art, and crocheting. </h3>
 <h2> Clubs I'm Involved In:</h2>
-<a href="https://www.una.edu/student-government/index.html"> UNA SGA </a>
-<a href="https://www.una.edu/alumni/saa.html"> UNA SAA</a>
+<ul>
+<li><a href="https://www.una.edu/student-government/index.html"> UNA SGA </a></li>
+<li><a href="https://www.una.edu/alumni/saa.html"> UNA SAA</a></li>
+</ul>
 </body>
 </html>
